about me and servicess

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Krishnkant Gautam</title>
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+    <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
                    
 </head>
@@ -34,7 +35,40 @@
 		</div>
 	<!--model---------------------->
 	<img alt="model" class="model" src="images/IMG_20190208_213305_915.jpg">  
-  
-    </section>
+</section>
+<div class="about-container">
+    <!--image about me -->
+    <img src="images/IMG_20190208_213305_915.jpg">
+    <!--About text-->
+    <div class="about-text">
+        <p>About Me</p>
+        <p>UI / UX Devolper & Designer</p>
+        <p>Hello, My name is Krishnkant Gautam. I am currently working as a front-end developper in inlogsys techno pvt ltd Bangalore. I have 1 year of expirence in front-end web devlopper</p>
+        <p>I am a UI/UX Devolper and also a Designer. if you have any project or want to make a website for your bussiness please do contact me. you are really gonna like my work.</p>
+        <button>Hire Me</button>
+        <button>Download CV</button>
+    </div>
+</div>
+<!--services-->
+<div class="services"> 
+    <!--text-->
+    <div class="services-text">
+        <p>services</p>
+        <p>Services Required</p>
+        <p>If you want a website for your bussiness or web application then Please contact me.</p>
+    </div>
+    <!--box container-->
+    <div class = "box-container">
+        <div class="box-1">
+            <span></span>
+            <p class="heading">Design</p>
+            <p></p>
+            <button></button>
+        </div>
+        <div class="box-2"></div>   
+        <div class="box-3"></div>
+
+    </div>
+</div>
 </body>
 </html>
