contact me section

--- a/index.html
+++ b/index.html
@@ -53,22 +53,36 @@
 <div class="services"> 
     <!--text-->
     <div class="services-text">
-        <p>services</p>
+        <p>Services</p>
         <p>Services Required</p>
         <p>If you want a website for your bussiness or web application then Please contact me.</p>
     </div>
     <!--box container-->
     <div class = "box-container">
         <div class="box-1">
-            <span></span>
-            <p class="heading">Design</p>
-            <p></p>
-            <button></button>
+            <span>1</span><br>
+            <p class="heading">Web Designing</p>
+            <p>If you want a website for your bussiness or web application then Please contact me.</p>
+            <button>Read more</button>
         </div>
-        <div class="box-2"></div>   
-        <div class="box-3"></div>
-
+        <div class="box-2">
+            <span>2</span><br>
+            <p class="heading">Web Devolpment</p>
+            <p>If you want a website for your bussiness or web application then Please contact me.</p>
+            <button>Read more</button>
+        </div>   
+        <div class="box-3">
+            <span>3</span><br>
+            <p class="heading">Web Application</p>
+            <p>If you want a website for your bussiness or web application then Please contact me.</p>
+            <button>Read more</button>
+        </div> 
     </div>
+</div>
+<!--contact me-->
+<div class="contact-me">
+<p>If You Have Any Project In Your Mind</p>
+<button>Contact Me</button>
 </div>
 </body>
 </html>
