footer and social icons

--- a/index.html
+++ b/index.html
@@ -84,5 +84,27 @@
 <p>If You Have Any Project In Your Mind</p>
 <button>Contact Me</button>
 </div>
+<!--footer-->
+<footer>
+    <p>Happy Growing Bussiness</p>
+    <p>Thanks For Visiting My Portfolio And Giving Your Valuable Time</p>
+    <!--social-->
+    <div class="social-icons">
+        <a href="#"><i class="fab fa-facebook"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-youtube"></i></a>
+    </div>
+    <!--Copyright-->
+    <p>Copyright By Krishnkant Gautam</p>
+</footer>
+<!--side social bar-->
+<div class="social-bar">
+    <a href="#"><i class="fab fa-facebook"></i></a>
+    <a href="#"><i class="fab fa-twitter"></i></a>
+    <a href="#"><i class="fab fa-instagram"></i></a>
+    <a href="#"><i class="fab fa-youtube"></i></a>
+</div>
+
 </body>
 </html>
