--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
                    
 </head>
 <body>
-    <section>
+    <section id="home">
         <nav>
             <!-- logo -->
             <a herf="#" class="logo">My Portfolio</a>
             <!-- menu -->
             <ul>
-                <li><a href="#" class="active">Home </a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Experience</a></li>
-                <li><a href="#">contact me</a></li>
+                <li><a href="#home" class="active">Home </a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#contact-me">Contact me</a></li>
             </ul>
             <!-- bars -->
             <div class="toggle"></div>
         </nav>
         <!--text----------------------->
-		<div class="text-container">
+		<div id ="about" class="text-container">
 			<p>Hello,</p>
 		    <p>I&#8217;M KRISHNA</p>
 			<p>Freelancing with Designer <br>& Devolper</p>
@@ -50,7 +50,7 @@
     </div>
 </div>
 <!--services-->
-<div class="services"> 
+<div id="services" class="services"> 
     <!--text-->
     <div class="services-text">
         <p>Services</p>
@@ -80,7 +80,7 @@
     </div>
 </div>
 <!--contact me-->
-<div class="contact-me">
+<div id="contact-me" class="contact-me">
 <p>If You Have Any Project In Your Mind</p>
 <button>Contact Me</button>
 </div>
@@ -90,20 +90,20 @@
     <p>Thanks For Visiting My Portfolio And Giving Your Valuable Time</p>
     <!--social-->
     <div class="social-icons">
-        <a href="#"><i class="fab fa-facebook"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-youtube"></i></a>
+        <a href="https://www.facebook.com/krishnkant.gautam.3/" target= "_blank"><i class="fab fa-facebook"></i></a>
+        <a href="https://twitter.com/Krishna1212031" target= "_blank"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.instagram.com/krishna1212031/" target= "_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://github.com/krishna1212031" target= "_blank"><i class="fab fa-github"></i></a>
     </div>
     <!--Copyright-->
     <p>Copyright By Krishnkant Gautam</p>
 </footer>
-<!--side social bar-->
-<div class="social-bar">
-    <a href="#"><i class="fab fa-facebook"></i></a>
-    <a href="#"><i class="fab fa-twitter"></i></a>
-    <a href="#"><i class="fab fa-instagram"></i></a>
-    <a href="#"><i class="fab fa-youtube"></i></a>
+<!--side social bar--> 
+<div class="a-social-b">
+    <a href="https://www.facebook.com/krishnkant.gautam.3/" target= "_blank"><i class="fab fa-facebook"></i></a>
+    <a href="https://twitter.com/Krishna1212031" target= "_blank"><i class="fab fa-twitter"></i></a>
+    <a href="https://www.instagram.com/krishna1212031/" target= "_blank"><i class="fab fa-instagram"></i></a>
+    <a href="https://github.com/krishna1212031" target= "_blank"><i class="fab fa-github"></i></a>
 </div>
 
 </body>
