--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <a href="https://github.com/krishna1212031" target= "_blank"><i class="fab fa-github"></i></a>
     </div>
     <!--Copyright-->
-    <p>Copyright By Krishnkant Gautam</p>
+    <p>Copyright &#169; Krishnkant Gautam</p>
 </footer>
 <!--side social bar--> 
 <div class="a-social-b">
