spell correction fav icon navigation position fixed

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Krishnkant Gautam</title>
+    <link rel="shortcut icon" type="image/jpg" href="images/IMG_20190208_213305_915.jpg"/>
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
                    
@@ -14,7 +17,10 @@
     <section id="home">
         <nav>
             <!-- logo -->
-            <a herf="#" class="logo">My Portfolio</a>
+            <div class="profile">
+                <img src="images/IMG_20190208_213305_915.jpg">
+                <a herf="https://krishna1212031.github.io/#contact-me" class="logo">Krishnkant Gautam</a>
+            </div>
             <!-- menu -->
             <ul>
                 <li><a href="#home" class="active">Home </a></li>
@@ -22,14 +28,12 @@
                 <li><a href="#services">Services</a></li>
                 <li><a href="#contact-me">Contact me</a></li>
             </ul>
-            <!-- bars -->
-            <div class="toggle"></div>
         </nav>
         <!--text----------------------->
 		<div id ="about" class="text-container">
 			<p>Hello,</p>
 		    <p>I&#8217;M KRISHNA</p>
-			<p>Freelancing with Designer <br>& Devolper</p>
+			<p>Freelancing with Designer <br>& developer</p>
 			<button class="hire-btn">Hire me</button>
 			<button class="down-cv">Download CV</button>
 		</div>
@@ -42,9 +46,9 @@
     <!--About text-->
     <div class="about-text">
         <p>About Me</p>
-        <p>UI / UX Devolper & Designer</p>
-        <p>Hello, My name is Krishnkant Gautam. I am currently working as a front-end developper in inlogsys techno pvt ltd Bangalore. I have 1 year of expirence in front-end web devlopper</p>
-        <p>I am a UI/UX Devolper and also a Designer. if you have any project or want to make a website for your bussiness please do contact me. you are really gonna like my work.</p>
+        <p>UI / UX Developer & Designer</p>
+        <p>Hello, My name is Krishnkant Gautam. I am currently working as a front-end developer in inlogsys techno pvt ltd Bangalore. I have 1 year of experience in front-end web development.</p>
+        <p>I am a UI/UX Developer and also a Designer. if you have any project or want to make a website for your bussiness please do contact me. you are really gonna like my work.</p>
         <button>Hire Me</button>
         <button>Download CV</button>
     </div>
@@ -55,26 +59,26 @@
     <div class="services-text">
         <p>Services</p>
         <p>Services Required</p>
-        <p>If you want a website for your bussiness or web application then Please contact me.</p>
+        <p>If you want a website for your bussiness or web application then please contact me.</p>
     </div>
     <!--box container-->
     <div class = "box-container">
         <div class="box-1">
             <span>1</span><br>
             <p class="heading">Web Designing</p>
-            <p>If you want a website for your bussiness or web application then Please contact me.</p>
+            <p>If you want a website for your bussiness or web application then please contact me.</p>
             <button>Read more</button>
         </div>
         <div class="box-2">
             <span>2</span><br>
             <p class="heading">Web Devolpment</p>
-            <p>If you want a website for your bussiness or web application then Please contact me.</p>
+            <p>If you want a website for your bussiness or web application then please contact me.</p>
             <button>Read more</button>
         </div>   
         <div class="box-3">
             <span>3</span><br>
             <p class="heading">Web Application</p>
-            <p>If you want a website for your bussiness or web application then Please contact me.</p>
+            <p>If you want a website for your bussiness or web application then please contact me.</p>
             <button>Read more</button>
         </div> 
     </div>
