--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
             <!-- logo -->
             <div class="profile">
                 <img src="images/IMG_20190208_213305_915.jpg">
-                <a herf="https://krishna1212031.github.io/#contact-me" class="logo">Krishnkant Gautam</a>
+                <text class="logo">Krishnkant Gautam</text>
             </div>
             <!-- menu -->
             <ul>
-                <li><a href="#home" class="active">Home </a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#contact-me">Contact me</a></li>
+                <li><a href="#home" id="underline" >Home </a></li>
+                <li><a href="#about" id="underline">About</a></li>
+                <li><a href="#services" id="underline">Services</a></li>
+                <li><a href="#contact-me" id="underline">Contact me</a></li>
             </ul>
         </nav>
         <!--text----------------------->
@@ -38,7 +38,7 @@
 			<button class="down-cv">Download CV</button>
 		</div>
 	<!--model---------------------->
-	<img alt="model" class="model" src="images/IMG_20190208_213305_915.jpg">  
+	<!-- <img alt="model" class="model" src="images/IMG_20190208_213305_915.jpg">   -->
 </section>
 <div class="about-container">
     <!--image about me -->
@@ -48,7 +48,7 @@
         <p>About Me</p>
         <p>UI / UX Developer & Designer</p>
         <p>Hello, My name is Krishnkant Gautam. I am currently working as a front-end developer in inlogsys techno pvt ltd Bangalore. I have 1 year of experience in front-end web development.</p>
-        <p>I am a UI/UX Developer and also a Designer. if you have any project or want to make a website for your bussiness please do contact me. you are really gonna like my work.</p>
+        <p>I am a UI/UX Developer and also a Designer. If you have any project or want to make a website for your bussiness please do contact me. You are really going to love my work.</p>
         <button>Hire Me</button>
         <button>Download CV</button>
     </div>
@@ -58,7 +58,7 @@
     <!--text-->
     <div class="services-text">
         <p>Services</p>
-        <p>Services Required</p>
+        <p>Services Available</p>
         <p>If you want a website for your bussiness or web application then please contact me.</p>
     </div>
     <!--box container-->
