--- a/index.html
+++ b/index.html
@@ -63,19 +63,19 @@
     </div>
     <!--box container-->
     <div class = "box-container">
-        <div class="box-1">
+        <div class="box-1 box">
             <span>1</span><br>
             <p class="heading">Web Designing</p>
             <p>If you want a website for your bussiness or web application then please contact me.</p>
             <button>Read more</button>
         </div>
-        <div class="box-2">
+        <div class="box-2 box">
             <span>2</span><br>
             <p class="heading">Web Devolpment</p>
             <p>If you want a website for your bussiness or web application then please contact me.</p>
             <button>Read more</button>
         </div>   
-        <div class="box-3">
+        <div class="box-3 box">
             <span>3</span><br>
             <p class="heading">Web Application</p>
             <p>If you want a website for your bussiness or web application then please contact me.</p>
