--- a/index.html
+++ b/index.html
@@ -22,12 +22,35 @@
                 <text class="logo">Krishnkant Gautam</text>
             </div>
             <!-- menu -->
-            <ul>
+            <ul class="openm">
                 <li><a href="#home" id="underline" >Home </a></li>
                 <li><a href="#about" id="underline">About</a></li>
                 <li><a href="#services" id="underline">Services</a></li>
                 <li><a href="#contact-me" id="underline">Contact me</a></li>
             </ul>
+            <!-- <div class = "hamburger">
+
+                        grey use karo na :) Arey check karne k liye dalaeeeeeeeeeee khush?
+
+                <span></span>
+                <span></span>
+                <span></span> -->
+            </div>
+            <div id="menu"> 
+                <input type="checkbox" name="toggle" id="toggle" />
+                <label for="toggle" class="btn">     
+                    <span class="clk"></span>
+                </label>
+                <div class="menu-cont">
+                    <ol>
+                        <li><a href="#home" id="button-r" >Home </a></li>
+                        <li><a href="#about" id="button-r">About</a></li>
+                        <li><a href="#services" id="button-r">Services</a></li>
+                        <li><a href="#contact-me" id="button-r">Contact me</a></li>
+                    </ol>
+                </div>
+                
+            </div>
         </nav>
         <!--text----------------------->
 		<div id ="about" class="text-container">
@@ -37,8 +60,6 @@
 			<button class="hire-btn">Hire me</button>
 			<button class="down-cv">Download CV</button>
 		</div>
-	<!--model---------------------->
-	<!-- <img alt="model" class="model" src="images/IMG_20190208_213305_915.jpg">   -->
 </section>
 <div class="about-container">
     <!--image about me -->
@@ -109,6 +130,7 @@
     <a href="https://www.instagram.com/krishna1212031/" target= "_blank"><i class="fab fa-instagram"></i></a>
     <a href="https://github.com/krishna1212031" target= "_blank"><i class="fab fa-github"></i></a>
 </div>
+
 
 </body>
 </html>
