--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 		    <p>I&#8217;M KRISHNA</p>
 			<p>Freelancing with Designer <br>& developer</p>
 			<button id ="about" class="hire-btn">Hire me</button>
-			<button class="down-cv"><a href="cv\KRISHNKANT GAUTAM.docx" class = "link-c" >Download CV</a></button>
+			<button class="down-cv"><a href="cv\KRISHNKANT GAUTAM.pdf" class = "link-c" >Download CV</a></button>
 		</div>
 </section>
 
@@ -104,7 +104,7 @@
         <p>Hello, My name is Krishnkant Gautam. I am currently working as a front-end developer in inlogsys techno pvt ltd Bangalore. I have 1 year of experience in front-end web development.</p>
         <p>I am a UI/UX Developer and also a Designer. If you have any project or want to make a website for your bussiness please do contact me. You are really going to love my work.</p>
         <button>Hire Me</button>
-        <button id="services" ><a href="cv\KRISHNKANT GAUTAM.docx" class = "link-c" >Download CV</a></button>
+        <button id="services" ><a href="cv\KRISHNKANT GAUTAM.pdf" class = "link-c" >Download CV</a></button>
     </div>
 </div>
 <!--services-->
